<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jakarta Flood Alert</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="myplace">My Places</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_as_list">Places List</string>
    <string name="action_about">About</string>
    <string name="action_map">Map</string>
    <string name="info">Information</string>
    <string name="tutorial">Tutorial</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Delete</string>
    <string name="action_new">Add</string>
    <string name="location_hint">Enter location name</string>
    <string name="dummy_location">Di hatimuuuuoooo</string>
    <string name="judulInformation">COLOR MEANINGS</string>
    <string name="rekomendasiKosong">There is no sluice recommendation in this area.</string>
    <string name="title1">SLUICE RECOMMENDATION</string>
    <string name="button_text">Follow</string>
    <string name="content">Siaga</string>
    <string name="siaga4">The increase in the water flow is not noticeable. Person in charge of field operations carried out by the deputy commander of the area.</string>
    <string name="siaga3">Happens if rain water led to an increase in water in the sluice, 
but this condition is not critical and dangerous yet.</string>
    <string name="siaga2">Happens if rains caused widespread water discharge. Person in charge is Head of the Regional Disaster Management.</string>
    <string name="siaga1">Happens within six hours if the water flow is not receding. Person in charge is the Governor.</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Following</string>
    <string name="deskripsi">Siaga Banjir (Jakarta Flood Alert) is an application that functions to monitor 14 sluices’ activities in Jakarta.</string>
	<string name="us">Developed with love:</string>
	<string name="emptyplace">You haven\'t saved any location yet.</string>
	<string name="locationnotice">To use this feature, Google\'s Location Service has to be enabled first.</string>
	<string name="lastupdated">Last Updated: </string>
	<string name="longtapinfo">Tap and hold to add new location.</string>
    <string name="follownotif">You will be notified when there are changes on sluice </string>
</resources>