<?xml version="1.0" encoding="utf-8"?>
<!-- Parent linear layout with vertical orientation -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <!-- Row 1 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:src="@drawable/circle_dummy" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center"
                android:padding="5dip"
                android:text="@string/siaga4"
                android:fontFamily="sans-serif-light"
                android:textColor="#424242"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Row 2 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center"
                android:padding="5dip"
                android:text="@string/siaga3"
                android:fontFamily="sans-serif-light"
                android:textColor="#424242"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:src="@drawable/circle_dummy" />
        </LinearLayout>

        <!-- Row 3 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:src="@drawable/circle_dummy" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center"
                android:padding="5dip"
                android:text="@string/siaga2"
                android:fontFamily="sans-serif-light"
                android:textColor="#424242"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Row 4 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center"
                android:padding="5dip"
                android:text="@string/siaga1"
                android:fontFamily="sans-serif-light"
                android:textColor="#424242"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dip"
                android:src="@drawable/circle_dummy" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>